Signed-off-by: Salman ALAMDAR <salman.alamdar@gmail.com>

--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -1123,3 +1123,7 @@ background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e
 	position:relative;
 	left:30%;
 }
+#new_debate{
+	margin:auto;
+	width:455px;
+}
