Signed-off-by: Salman ALAMDAR <salman.alamdar@gmail.com>

--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -299,7 +299,7 @@ color: #333333;
   border-top-right-radius:6px;
   box-shadow:#777777 2px 2px 1px;
   margin: auto;
-  width: 50%;
+  width: 570px;
   padding: 6px 5px;
   font-family: Arial;
 }
