--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -302,8 +302,6 @@ color: #333333;
   width: 570px;
   padding: 6px 5px;
   font-family: Arial;
-  top:163px;
-  position:relative;
 }
 
 .rate_button {
@@ -1152,7 +1150,25 @@ background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e
 .over {
   background-color:#41BFE6;
 }
-#box {
+#box2{
+
+  background-image:-webkit-linear-gradient(top, #F7F7F7, #D9D9D9);
+  background-position:initial initial;
+  background-repeat:initial initial;
+
+  color:#333333;
+  font-family:Arial;
+  font-size:16px;
+  font-weight:bold;
+  height:30px;
+  left:658px;
+  position:relative;
+  text-align:center;
+  top:603px;
+  width:585px;
+  height:89px;
+}
+#box{
      -webkit-box-shadow:#000000 0 1px 0;
     background: -webkit-gradient(linear, left top, left bottom, from(#f7f7f7), to(#d9d9d9));
    background: -webkit-linear-gradient(top, #f7f7f7, #d9d9d9);
@@ -1174,7 +1190,7 @@ background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e
   width:400px;
   text-align:center;
 }
-#box p {
+#box p{
   background-image:url(img/warning.png);
   background-position:10px 50%;
   background-repeat:no-repeat no-repeat;
@@ -1182,12 +1198,12 @@ background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e
   padding-left:90px;
   text-align:center;
 }
-#box p b {
+#box p b{
   display:block;
   font-size:52px;
   text-align:center;
 }
-#rehan {
+#rehan{
   width:104%;
 }
 .cat_color {
