--- a/Developpement/design/presentation.css
+++ b/Developpement/design/presentation.css
@@ -238,7 +238,7 @@ section, footer{
 #music h2{
 	left: 0;
     text-align: center;
-    top: 10px;
+    top: 100px;
     width: 100%;
 }
 
@@ -246,13 +246,15 @@ section, footer{
 	font-size: 15px;
     left: 45px;
     text-indent: 15px;
-    top: 119px;
+    top: 200px;
     width: 402px;
 }
 
 #music img{
 	right: 0;
-    top: 200px;
+    bottom: 0px;
+	
+
 }
 
 
@@ -295,4 +297,12 @@ section, footer{
 	left: 44px;
     position: relative;
     top: 257px;
+}
+.retour
+{
+	position: fixed;
+	bottom: 5px;
+	right: 5px;
+	font: normal 18px/1.3 'Open Sans', sans-serif;
+	font-size: 24px;
 }
