--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -498,11 +498,13 @@ font-weight: bold;
 }
 
 
-.title_create_article input[type="text"]:focus {
-  border-color:#093C75;
-  box-shadow:#1A9DC5 0 0 3px;
-  outline:none medium;
+
+input[type="text"]:focus
+{
+	box-shadow: 2px 2px 2px #0092bf;
 }
+
+
 select {
    -webkit-box-shadow:#000000 0 1px 0;
     background: -webkit-gradient(linear, left top, left bottom, from(#f7f7f7), to(#d9d9d9));
