--- a/Developpement/design/debate.css
+++ b/Developpement/design/debate.css
@@ -9,6 +9,7 @@ background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e
   border-top-left-radius:6px;
   border-top-right-radius:6px;
   box-shadow: 1px 1px 3px #111111;
+  text-align:center;
   margin:auto;
   padding:6px 5px;
   vertical-align:top;
