--- a/Developpement/design/presentation.css
+++ b/Developpement/design/presentation.css
@@ -128,11 +128,11 @@ section, footer{
 }
 
 #intro p{
-	font-size: 22px;
-    left: 290px;
-    line-height: 1.6;
-    top: 220px;
-    white-space: nowrap;
+	font-size:19px;
+  left:264px;
+  line-height:1.6;
+  top:220px;
+  white-space:nowrap;
 }
 
 #intro img{
@@ -305,4 +305,9 @@ section, footer{
 	right: 5px;
 	font: normal 18px/1.3 'Open Sans', sans-serif;
 	font-size: 24px;
+}
+#lol{
+left:-142px;
+  position:relative;
+  top:100px;
 }
