--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -140,16 +140,19 @@ margin-top: 5px;
   vertical-align:middle;
 }
 .rate {
-
-  color: #333333;
+display: block;
+  color: #777777;
   font-family: Arial;
   font-size: 16px;
   font-weight: bold;
-  height:100%;
+  height: 100%;
   text-decoration:none;
-  vertical-align:middle;
-  width:30px;
+  vertical-align:top;
+  width: 20px;
   text-align: right;
+  
+  
+  
 }
 .description {
 color: #333333;
