Signed-off-by: Alisha Bond <bunlon@intechinfo.fr>

--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -1078,7 +1078,31 @@ background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e
   width:500px;
   font-weight: bold;
 }
+
+.accordionOuvertbutton {
+background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e0e0e0));
+   background: -webkit-linear-gradient(top, #f9f9f9, #e0e0e0);
+   background: -moz-linear-gradient(top, #f9f9f9, #e0e0e0);
+   background: -ms-linear-gradient(top, #f9f9f9, #e0e0e0);
+   background: -o-linear-gradient(top, #f9f9f9, #e0e0e0);
+  border:1px solid #003E40;
+  border-bottom-left-radius:3px;
+  border-bottom-right-radius:3px;
+  border-top-left-radius:3px;
+  border-top-right-radius:3px;
+  box-shadow:#000000 0 1px 0;
+  color: #333333;
+  cursor:pointer;
+  float:left;
+  font-size: 14px;
+  width:500px;
+  font-weight: bold;
+}
 .accordionbutton :hover
+{
+	color: #333333;
+}
+.accordionOuvertbutton :hover
 {
 	color: #333333;
 }
@@ -1100,9 +1124,35 @@ background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e
   border-top-right-radius:6px;
   box-shadow:#003E40 2px 2px 2px;
 }
-
+.accordionOuvertcontent {
+  background-position:initial initial;
+  background-repeat:initial initial;
+  float:left;
+  width: 600px;
+    -webkit-box-shadow:#000000 0 1px 0;
+    background: -webkit-gradient(linear, left top, left bottom, from(#f7f7f7), to(#d9d9d9));
+   background: -webkit-linear-gradient(top, #f7f7f7, #d9d9d9);
+   background: -moz-linear-gradient(top, #f7f7f7, #d9d9d9);
+   background: -ms-linear-gradient(top, #f7f7f7, #d9d9d9);
+   background: -o-linear-gradient(top, #f7f7f7, #d9d9d9);
+ 
+  border-bottom-left-radius:6px;
+  border-bottom-right-radius:6px;
+  border-top-left-radius:6px;
+  border-top-right-radius:6px;
+  box-shadow:#003E40 2px 2px 2px;
+}
 
 .accordionbutton2 {
+text-align: right;
+  color: #333333;
+  cursor:pointer;
+
+  font-size: 12px;
+  font-weight: bold;
+  
+}
+.accordionOuvertbutton2 {
 text-align: right;
   color: #333333;
   cursor:pointer;
@@ -1115,7 +1165,29 @@ text-align: right;
 {
 	color: #333333;
 }
+.accordionOuvertbutton2 :hover
+{
+	color: #333333;
+}
 .accordioncontent2 {
+  background-position:initial initial;
+  background-repeat:initial initial;
+
+
+    -webkit-box-shadow:#000000 0 1px 0;
+    background: -webkit-gradient(linear, left top, left bottom, from(#f7f7f7), to(#d9d9d9));
+   background: -webkit-linear-gradient(top, #f7f7f7, #d9d9d9);
+   background: -moz-linear-gradient(top, #f7f7f7, #d9d9d9);
+   background: -ms-linear-gradient(top, #f7f7f7, #d9d9d9);
+   background: -o-linear-gradient(top, #f7f7f7, #d9d9d9);
+ 
+  border-bottom-left-radius:6px;
+  border-bottom-right-radius:6px;
+  border-top-left-radius:6px;
+  border-top-right-radius:6px;
+  box-shadow:#003E40 2px 2px 2px;
+}
+.accordionOuvertcontent2 {
   background-position:initial initial;
   background-repeat:initial initial;
 
