Signed-off-by: Michel Gille <gille@intechinfo.fr>

--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -687,8 +687,9 @@ input[type="submit"] :hover
 }
 .propulse_debate {
 
- margin: right;
+ text-align: right;
   top:-43px;
+  margin-left: 700px;
   width:100px;
   z-index:0;
 }
