--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -1090,7 +1090,7 @@ background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e
   width: 32%;
     margin: auto;
     position: absolute;
-    left: 285px;
+    left: 301px;
 	margin-top:-13px;
 }
 
@@ -1125,7 +1125,8 @@ background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e
   background-position:initial initial;
   background-repeat:initial initial;
   float:left;
-  width: 60%;
+  width: 46%;
+  margin-left:-8px;
     -webkit-box-shadow:#000000 0 1px 0;
     background: -webkit-gradient(linear, left top, left bottom, from(#f7f7f7), to(#d9d9d9));
    background: -webkit-linear-gradient(top, #f7f7f7, #d9d9d9);
@@ -1143,7 +1144,8 @@ background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e
   background-position:initial initial;
   background-repeat:initial initial;
   float:left;
-  width: 60%;
+  width: 46%;
+  margin-left:-8px;
     -webkit-box-shadow:#000000 0 1px 0;
     background: -webkit-gradient(linear, left top, left bottom, from(#f7f7f7), to(#d9d9d9));
    background: -webkit-linear-gradient(top, #f7f7f7, #d9d9d9);
@@ -1410,6 +1412,12 @@ padding: 6px 5px;
 
 	
 }
+#delete_com
+{
+	left:62px;
+  position:relative;
+  top:17px;
+}
 .mon_profil{
 background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e0e0e0));
    background: -webkit-linear-gradient(top, #f9f9f9, #e0e0e0);
@@ -1428,3 +1436,4 @@ background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e
   width:125%;
   height:257px;
  }
+ 
