Signed-off-by: Salman ALAMDAR <salman.alamdar@gmail.com>

--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -1124,10 +1124,9 @@ background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e
   cursor:pointer;
   font-size: 14px;
   font-weight: bold;
-  width: 32%;
-    margin: auto;
-    position: absolute;
-    left: 301px;
+  width: 50%;
+    /* margin: auto; */
+    position: relative;
 	margin-top:-13px;
 }
 
@@ -1162,8 +1161,8 @@ background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e
   background-position:initial initial;
   background-repeat:initial initial;
   float:left;
-  width: 46%;
-  margin-left:-8px;
+  width: 50%;
+  /* margin-left:-8px; */
     -webkit-box-shadow:#000000 0 1px 0;
     background: -webkit-gradient(linear, left top, left bottom, from(#f7f7f7), to(#d9d9d9));
    background: -webkit-linear-gradient(top, #f7f7f7, #d9d9d9);
@@ -1181,8 +1180,8 @@ background: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#e
   background-position:initial initial;
   background-repeat:initial initial;
   float:left;
-  width: 46%;
-  margin-left:-8px;
+  width: 50%;
+  /* margin-left:-8px; */
     -webkit-box-shadow:#000000 0 1px 0;
     background: -webkit-gradient(linear, left top, left bottom, from(#f7f7f7), to(#d9d9d9));
    background: -webkit-linear-gradient(top, #f7f7f7, #d9d9d9);
