Signed-off-by: Michel Gille <gille@intechinfo.fr>

--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -494,6 +494,7 @@ font-weight: bold;
   margin:auto;
   padding:6px 5px;
   border: 1px solid #333333;
+  height: 100px;
 }
 .article_content {
   padding:6px 5px;
